<resources>
    <string name="app_name">login</string>

    <string name="login_item_def_name">Imię Nazwisko</string>
    <string name="login_item_def_email">przykładowy@email.com</string>

    <string name="register_button">Zarejestruj konto</string>
    <string name="logoutButton">Wyloguj się</string>
    <string name="confirm">Zatwierdź</string>

    <string name="formName">nazwa użytkownika</string>
    <string name="formEmail">email</string>
    <string name="formPass">hasło</string>
    <string name="formRepeatPass">powtórz hasło</string>
    <string name="formSubmit">Załóż konto</string>

    <string name="formNameTooLong">Za długa nazwa</string>
    <string name="formNameTooShort">Za krótka nazwa</string>
    <string name="formEmailInvalid">Niepoprawny email</string>
    <string name="formEmailExists">Podany email już jest zajęty</string>
    <string name="formPassTooShort">Hasło za krótkie</string>
    <string name="formPassTooLong">Hasło za długie</string>
    <string name="formPassRegexError">Nieprawidłowe hasło</string>
    <string name="formPassNotMatch">Hasła nie są identyczne</string>

    <string name="mainNavData">Dane</string>
    <string name="mainNavNotifications">Powiadomienia</string>
    <string name="mainNavAccount">Konto</string>

    <string name="settingsChangeEmail">Zmień Email</string>
    <string name="settingsChangePass">Zmień Hasło</string>

    <string name="pfpDialogNeutral">anuluj</string>
    <string name="pfpDialogNegative">usuń</string>
    <string name="pfpDialogPositive">akceptuj</string>
    <string name="pfpDialogTitle">Zmień zdjęcie profilowe</string>
</resources>