<?xml version="1.0" encoding="utf-8"?>
<ScrollView tools:context=".MainSettings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="48dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="28dp"
            android:src="@drawable/default_pfp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            tools:ignore="ImageContrastCheck" />

        <TextView android:id="@+id/name"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_item_def_name"/>

        <TextView android:id="@+id/email"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_item_def_email"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutButton"
            />

        <TextView android:layout_marginTop="24dp"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsChangeEmail"/>

        <com.example.login.ui.ValidatedInputLayout
            android:id="@+id/changeEmail"
            app:validator="email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="2dp"
            android:hint="@string/formEmail"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.example.login.ui.ValidatedInputLayout>
        <Button android:id="@+id/emailConfirm"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <TextView android:layout_marginTop="24dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsChangePass"/>

        <com.example.login.ui.ValidatedInputLayout
            android:id="@+id/currentPass"
            app:validator="pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="2dp"
            android:hint="@string/formPass"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.example.login.ui.ValidatedInputLayout>
        <Button android:id="@+id/passConfirm"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>
</ScrollView>
