<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/default_pfp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.login.ui.ValidatedInputLayout
        android:id="@+id/name"
        app:validator="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="2dp"
        android:hint="@string/formName"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.example.login.ui.ValidatedInputLayout>

    <com.example.login.ui.ValidatedInputLayout
        android:id="@+id/email"
        app:validator="email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="2dp"
        android:hint="@string/formEmail"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.example.login.ui.ValidatedInputLayout>

    <com.example.login.ui.ValidatedInputLayout
        android:id="@+id/pass"
        app:validator="pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="2dp"
        android:hint="@string/formPass"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.example.login.ui.ValidatedInputLayout>

    <com.example.login.ui.ValidatedInputLayout
        android:id="@+id/repeatPass"
        app:validator="repeatPass"
        app:passInput="@id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="2dp"
        android:hint="@string/formRepeatPass"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.example.login.ui.ValidatedInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="128dp"
        android:layout_marginVertical="8dp"
        android:text="@string/formSubmit"
        />
</LinearLayout>